kubernetes/apps/network/traefik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik
spec:
  parentRefs:
    - name: traefik
      kind: Gateway

  hostnames:
    - traefik.test.egenintres.se

  rules:
    - backendRefs:
        - name: traefik
          port: 9000

      matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
